# TraceYourDay

TraceYourDay-Client/: CMakeLists.txt  Makefile  readme.md  text viewer list.txt  tyd-client
TraceYourDay-Client/headers/: ipc_utils.h  path.h  record.h  signal_utils.h  size.h  strings.h  utils.h  x11_utils.h
TraceYourDay-Client/src/: dayrecord.c  ipc_utils.c  main.c  record.c  signal_utils.c  utils.c  window_manager.c  x11_utils.c
TraceYourDay-Server/: CMakeLists.txt  Makefile  main.c  tyd-server
